# BGMPlayer

./: .gitmodules  CMakeLists.txt  ___CMakeLists__.txt
src/: CMakeLists.txt  main.cc
src/3rd/: CMakeLists.txt
src/3rd/FLAC/: all.h  assert.h  callback.h  export.h  format.h  metadata.h  ordinals.h  stream_decoder.h  stream_encoder.h
src/3rd/FLAC/src/: bitmath.c  bitreader.c  bitwriter.c  cpu.c  crc.c  fixed.c  fixed_intrin_sse2.c  fixed_intrin_ssse3.c  float.c  format.c  lpc.c  lpc_intrin_avx2.c  lpc_intrin_sse.c  lpc_intrin_sse2.c  lpc_intrin_sse41.c  md5.c  memory.c  metadata_iterators.c  metadata_object.c  ogg_decoder_aspect.c  ogg_encoder_aspect.c  ogg_helper.c  ogg_mapping.c  stream_decoder.c  stream_encoder.c  stream_encoder_framing.c  stream_encoder_intrin_avx2.c  stream_encoder_intrin_sse2.c  stream_encoder_intrin_ssse3.c  win_utf8_io.c  window.c
src/3rd/libogg/src/: bitwise.c  framing.c
src/3rd/libvorbis/src/: analysis.c  backends.h  barkmel.c  bitrate.c  bitrate.h  block.c  codebook.c  codebook.h  codec_internal.h  envelope.c  envelope.h  floor0.c  floor1.c  highlevel.h  info.c  lookup.c  lookup_data.h  lpc.c  lpc.h  lsp.c  lsp.h  mapping0.c  masking.h  mdct.c  mdct.h  misc.h  os.h  psy.c  psy.h  psytune.c  registry.c  registry.h  res0.c  scales.h  sharedbook.c  smallft.c  smallft.h  synthesis.c  tone.c  vorbisenc.c  (+3 more)
src/3rd/minimp3/: minimp3.h  minimp3_ex.h
src/3rd/musepack/libmpcdec/: crc32.c  decoder.h  huffman.c  huffman.h  internal.h  mpc_bits_reader.c  mpc_bits_reader.h  mpc_decoder.c  mpc_demux.c  mpc_reader.c  mpcdec_math.h  requant.c  requant.h  streaminfo.c  synth_filter.c
src/3rd/musepack/libmpcenc/: analy_filter.c  bitstream.c  encode_sv7.c  huffsv7.c  libmpcenc.h  quant.c
src/3rd/opus/celt/: _kiss_fft_guts.h  arch.h  bands.c  bands.h  celt.c  celt.h  celt_decoder.c  celt_encoder.c  celt_lpc.c  cpu_support.h  cwrs.c  cwrs.h  ecintrin.h  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  fixed_debug.h  fixed_generic.h  float_cast.h  kiss_fft.c  kiss_fft.h  (+19 more)
src/3rd/rtaudio/: RtAudio.h
src/Nyquist/: CMakeLists.txt  Common.h  Decoders.h  Encoders.h  FlacDependencies.c  Mp3Decoder.cc  MusepackDecoder.cc  MusepackDependencies.c  OpusDependencies.c  VorbisDependencies.c  WavPackDecoder.cc
src/cocoa/: AudioDevice.h  CMakeLists.txt  RingBuffer.h  dummy.cc  dummy.h
src/editor/: CMakeLists.txt
src/player/: CMakeLists.txt
src/player/audio/: holder.hpp  manager.cc  manager.hpp
(+290 files in other folders)
